# actsemble

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
dashboard/: README.md  _viewer.html  selection_headroom.html  selection_headroom.manifest.json
docs/: absolute_action_autopsy.md  actsemble_research_tracks.md  adding_components.md  checkpoint_selection_protocol.md  consensus_selectors.md  deferred_work.md  experiment_contract.md  findings_te_pristine.md  findings_temporal_replan.md  freeze_v2_migration.md  latency_rule.md  phase_0_scope.md  recovery_scheme_and_oracle.md  system_architecture.md  training_duration_law.md
requirements/: benchmark-cu128.txt
scripts/: README.md  active_minimal.py  analyze_ndemos_sweep.py  build_dashboard.py  compare_systems.py  compare_temporal.py  convert_action_representation.py  dashboard_watch.sh  diagnose_pickcube_transport.py  eval_canonical.py  evaluate.py  failure_taxonomy.py  finalize_dashboard.sh  generate_pickcube_teleop.py  inspect_dataset.py  oracle_headroom.py  overnight_canonical.py  passk_diagnostic.py  phase0a.py  phase0a_analysis.py  phase0a_runner.py  plot_recovery_height_curves.py  prepare_active_dataset.py  prepare_dataset.py  prepare_pushonly_dataset.py  probe_action_horizon_codex.py  probe_action_representation_offline_codex.py  probe_replan_slot_semantics_codex.py  probe_shadow_replan_codex.py  pushonly_minimal.py  recovery_drive_height.py  recovery_height_ablation.py  recovery_oracle.py  recovery_oracle_pickcube.py  recovery_perfect_injection.py  recovery_point_ablation.py  recovery_target_comparison.py  repair_checkpoint_metadata.py  replicate_act.py  reselect_policy.py  (+26 more)
tests/: conftest.py  test_act_policy.py  test_action_window_padding.py  test_canonical_infra.py  test_component_negatives.py  test_consensus_selectors.py  test_dataset_hash_compatibility.py  test_dataset_schema.py  test_diffusion_sampling_determinism.py  test_diffusion_shapes.py  test_episode_disjoint_split.py  test_fidelity_fixes.py  test_flow_policy.py  test_paired_evaluation.py  test_perturbations.py  test_policy_checkpoint_identity.py  test_protocol_freeze_and_audit.py  test_protocol_panels.py  test_protocol_selection_rules.py  test_rng_preservation.py  test_smoke_pipeline.py  (+7 more)
(+144 files in other folders)
