[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actsemble"
version = "0.0.1"
description = "Assembling robot autonomy systems from a frozen diffusion policy plus same-data learned components. Phase 0: state-based mechanism validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "torch>=2.4",
    "h5py>=3.10",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
sim = [
    "mani_skill>=3.0.0b21",
    "gymnasium>=0.29",
]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
