[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actsemble"
version = "0.0.1"
description = "Assembling robot autonomy systems from a frozen diffusion policy plus same-data learned components. Phase 0: state-based mechanism validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "torch>=2.4",
    "h5py>=3.10",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
sim = [
    "mani_skill>=3.0.0b21",
    "gymnasium>=0.29",
]
analysis = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
actsemble-train-policy = "actsemble.cli:train_policy_main"
actsemble-train-component = "actsemble.cli:train_component_main"
actsemble-verify-gpu = "actsemble.cli:verify_gpu_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:CUDA reports that you have .* available devices.*fork_rng:UserWarning",
]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src/actsemble"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.report]
fail_under = 70
show_missing = true
